test/types/records/ferguson/default-compare-mixed-insn.2.good
default-compare-mixed-insn.chpl:8: In function 'main':
default-compare-mixed-insn.chpl:16: error: unresolved call '==(R(int(64)), R(int(32)))'
default-compare-mixed-insn.chpl:1: note: this candidate did not match: ==(_arg1: R, _arg2: R)
